package com.rocket.radar;

/**
 * Handles logic notification db logic
 */
public class NotificationRepository {
}
